<resources>
    <string name="app_name">WellfareCoin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WellfarCoin</string>
    <string name="nav_header_subtitle">Pausas activas y sus beneficios</string>
    <string name="nav_header_desc">WellfarCoin logo</string>
    <string name="action_settings">Configuración</string>
    <string name="pausas_title">Pausas Realizadas</string>

    <string name="alarm_notification">WellfareCoin - Notificación</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Wallet</string>
    <string name="menu_marketplace">Marketplace y billetera</string>
    <string name="exit">Salir</string>
    <string name="profile_title">Perfil</string>
    <string name="prof_name">Nombre</string>
    <string name="prof_email">E-mail</string>
    <string name="balance">Balance</string>
    <string name="steps">Pasos</string>
    <string name="walk_title">Caminar</string>
    <string name="start">Iniciar</string>
    <string name="walk_intro">Para iniciar, dar clic a iniciar</string>
    <string name="total_distance">distancia recorrida</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email UNAB</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar sesion</string>
    <string name="action_sign_in_short">Iniciar sesion</string>
    <string name="welcome">"Bienvenido/a!"</string>
    <string name="invalid_username">No es un usuario valido</string>
    <string name="invalid_password">La contraseña no puede estar vacía</string>
    <string name="login_failed">"Error en el inicio de sesion"</string>
    <string name="username">Usuario</string>
    <string name="imgPausaDesc">Related to a pausa</string>
    <string name="txtPausaDesc">Related to a pausa</string>
    <string name="info_title">Ayuda - Pausas Activas</string>
    <string name="large_text">
        Infografía que explica que es una pausa activa.
        Una pausa activa es un pequeño descanso de las actividades que se tienen que realizar para
        evitar problemas de salud derivados del sedentarismo que imlica el lugar de trabajo
    </string>
    <string name="save">Guardar</string>
    <string name="pausa_video_title">Ejercicio de Video</string>
    <string name="update">Actualizar</string>
    <string name="dependency">dependencia</string>
    <string name="user_type">Tipo de usuario</string>
    <string name="program">Programa</string>
    <string name="signup_date">Fecha de ingreso</string>
    <string name="user_photo">Foto del usuario</string>
    <string name="title_pausa_validation">Validar Pausa</string>
    <string name="information">Información</string>
    <string name="web">Web</string>
    <string name="get_in">Ingresar</string>

    <string name="pausa_help_1">
        1) Conocer el estado del contador de tiempo para notificar el "momento" de realizar la pausa activa.
    </string>
    <string name="pausa_help_2">
        2) Activar el contador de tiempo para notificar el "momento" de realizar la pausa activa (normalmente la notificación aparece cada dos horas de haberse activado este contador sin interrupción).
    </string>
    <string name="pausa_help_3">
        3 ) Desactivar el contador para iniciar el nuevo conteo de tiempo o porque se va a realizar una pausa activa.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video">Video</string>
    <string name="walk">Caminar</string>
    <string name="pausas_activas">Pausas Activas</string>
    <string name="pausa_sel_text">Escoja el tipo de Tipo de pausa a ingresar</string>
    <string name="help_main_title">Información General</string>
    <string name="help_main_hint">Infografia general del entorno</string>
    <string name="next_help">Siguiente Ayuda</string>
    <string name="status_pausa_activa_title">\"Estado Pausa Activa\"</string>
    <string name="wallet_hep_txt">Esta opción permite conocer el saldo actual de welfare coins al igual que el historial de transacciones realizadas con esta moneda</string>
</resources>