<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_login"
        android:title="@string/get_in"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_back"
        android:title="Atrás" />
    <item
        android:id="@+id/action_next"
        android:title="Siguiente" />
    <item
        android:id="@+id/action_help_status"
        android:title="Ayuda notificación Pausa" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/information"
        app:showAsAction="never"  />
    <item
        android:id="@+id/action_pausa_help"
        android:orderInCategory="100"
        android:title="Ayuda Pausa"
        app:showAsAction="never"  />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="102"
        android:title="@string/profile_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_web"
        android:orderInCategory="103"
        android:title="@string/web"
        app:showAsAction="never"  />
<!--    <item-->
<!--        android:id="@+id/action_validar_pausas"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="Validar Pausas"-->
<!--        app:showAsAction="never"  />-->
    <item
        android:id="@+id/action_main"
        android:orderInCategory="104"
        android:title="Ir al inicio"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logoff"
        android:orderInCategory="105"
        android:title="cerrar sesión" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="106"
        android:title="@string/exit" />
</menu>