<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpMainActivity">

    <TextView
        android:id="@+id/helpMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/help_main_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="405dp"
        android:layout_height="600dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/large_text"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpMainTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/infographicLogin"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:contentDescription="@string/help_main_hint"
                app:srcCompat="@drawable/infografiawelfarecoin" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/nextHelpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/helpMainTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_media_ff"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/next_help" />
</androidx.constraintlayout.widget.ConstraintLayout>