<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PausasMainActivity">

    <TextView
        android:id="@+id/pausaActivaSelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:text="@string/pausas_activas"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pausaActivaLSelLogo" />

    <TextView
        android:id="@+id/PausaSelLbl"
        android:layout_width="119dp"
        android:layout_height="68dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:text="@string/pausa_sel_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pausaActivaSelTitle" />

    <RadioGroup
        android:layout_width="95dp"
        android:layout_height="101dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@id/PausaSelLbl"
        app:layout_constraintTop_toBottomOf="@+id/pausaActivaSelTitle">

        <RadioButton
            android:id="@+id/radio_pausa_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/video" />

        <RadioButton
            android:id="@+id/radio_pausa_walk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/walk" />
    </RadioGroup>

    <ImageView
        android:id="@+id/pausaActivaLSelLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>