<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.panicape.wellnesscoin.ui.login.LoginFragment"
        android:label="Iniciar sesion"
        tools:layout="@layout/fragment_login" >
<!--        <action-->
<!--            android:id="@+id/action_nav_login_to_login_home_frag"-->
<!--            app:destination="@id/login_home_frag"-->
<!--            app:popUpTo="@+id/login_home_frag" />-->
    </fragment>
    <fragment
        android:id="@+id/nav_home"
        android:name="com.panicape.wellnesscoin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/login_home_frag"
        android:name="com.panicape.wellnesscoin.ui.LoginMainFragment"
        android:label="Area de usuario"
        tools:layout="@layout/fragment_login_main" >
        <action
            android:id="@+id/action_nav_login_home_to_nav_marketplace"
            app:destination="@id/nav_marketplace" />
        <action
            android:id="@+id/action_nav_login_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_login_home_to_nav_slideshow"
            app:destination="@id/nav_wallet"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.panicape.wellnesscoin.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_login_home"
            app:destination="@id/login_home_frag" />
    </fragment>

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.panicape.wellnesscoin.ui.wallet.WalletFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_wallet" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_login_home"
            app:destination="@id/login_home_frag" />
    </fragment>

    <fragment
        android:id="@+id/nav_marketplace"
        android:name="com.panicape.wellnesscoin.ui.MarketplaceFragment"
        android:label="@string/menu_marketplace"
        tools:layout="@layout/marketplace_fragment" >
        <action
            android:id="@+id/action_nav_marketplace_to_nav_login_home"
            app:destination="@id/login_home_frag" />
    </fragment>
</navigation>